--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     />
     <meta
       property="og:image"
-      content="https://lstecnologia.com/images/LStecnologiaOG.png"
+      content="https://lstecnologia.com/LStecnologiaOG.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -56,7 +56,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://lstecnologia.com/images/LStecnologiaOG.png"
+      content="https://lstecnologia.com/LStecnologiaOG.png"
     />
 
     <!-- Additional Meta Tags -->
